<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>VpMain</class>
 <widget class="QMainWindow" name="VpMain">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>1350</width>
    <height>950</height>
   </rect>
  </property>
  <property name="font">
   <font>
    <pointsize>9</pointsize>
    <italic>false</italic>
   </font>
  </property>
  <property name="windowTitle">
   <string>VP Plots</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QWidget" name="horizontalLayoutWidget_2">
    <property name="geometry">
     <rect>
      <x>1180</x>
      <y>10</y>
      <width>161</width>
      <height>211</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="ControlArea"/>
   </widget>
   <widget class="QStackedWidget" name="stackedWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>10</y>
      <width>1161</width>
      <height>871</height>
     </rect>
    </property>
    <property name="frameShape">
     <enum>QFrame::Box</enum>
    </property>
    <property name="currentIndex">
     <number>4</number>
    </property>
    <widget class="QWidget" name="page_1">
     <widget class="QWidget" name="formLayoutWidget">
      <property name="geometry">
       <rect>
        <x>0</x>
        <y>0</y>
        <width>1160</width>
        <height>870</height>
       </rect>
      </property>
      <layout class="QFormLayout" name="FormLayoutVpType_01"/>
     </widget>
    </widget>
    <widget class="QWidget" name="page_2">
     <widget class="QWidget" name="formLayoutWidget_2">
      <property name="geometry">
       <rect>
        <x>0</x>
        <y>0</y>
        <width>1160</width>
        <height>870</height>
       </rect>
      </property>
      <layout class="QFormLayout" name="FormLayoutVpType_02"/>
     </widget>
    </widget>
    <widget class="QWidget" name="page_3">
     <widget class="QWidget" name="formLayoutWidget_3">
      <property name="geometry">
       <rect>
        <x>0</x>
        <y>0</y>
        <width>1161</width>
        <height>871</height>
       </rect>
      </property>
      <layout class="QFormLayout" name="FormLayoutVpType_03"/>
     </widget>
    </widget>
    <widget class="QWidget" name="page_4">
     <widget class="QWidget" name="formLayoutWidget_4">
      <property name="geometry">
       <rect>
        <x>0</x>
        <y>0</y>
        <width>1161</width>
        <height>871</height>
       </rect>
      </property>
      <layout class="QFormLayout" name="FormLayoutVpType_04"/>
     </widget>
    </widget>
    <widget class="QWidget" name="page_5">
     <widget class="QWidget" name="formLayoutWidget_5">
      <property name="geometry">
       <rect>
        <x>0</x>
        <y>0</y>
        <width>1161</width>
        <height>871</height>
       </rect>
      </property>
      <layout class="QFormLayout" name="FormLayoutVpType_05"/>
     </widget>
    </widget>
   </widget>
   <widget class="QFrame" name="ControlFrame">
    <property name="geometry">
     <rect>
      <x>1180</x>
      <y>20</y>
      <width>139</width>
      <height>201</height>
     </rect>
    </property>
    <property name="frameShape">
     <enum>QFrame::StyledPanel</enum>
    </property>
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
    <widget class="QRadioButton" name="RB_VpType_01">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>50</y>
       <width>111</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string>VP attributes</string>
     </property>
    </widget>
    <widget class="QRadioButton" name="RB_VpType_02">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>70</y>
       <width>121</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string>VP histograms</string>
     </property>
    </widget>
    <widget class="QPushButton" name="PB_Next">
     <property name="geometry">
      <rect>
       <x>50</x>
       <y>170</y>
       <width>41</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>Next</string>
     </property>
    </widget>
    <widget class="QPushButton" name="PB_Prev">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>170</y>
       <width>41</width>
       <height>23</height>
      </rect>
     </property>
     <property name="text">
      <string>Prev</string>
     </property>
    </widget>
    <widget class="QRadioButton" name="RB_VpType_04">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>110</y>
       <width>121</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string>Vib activity (all)</string>
     </property>
    </widget>
    <widget class="QRadioButton" name="RB_VpType_05">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>130</y>
       <width>131</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string>Vib activity (each)</string>
     </property>
    </widget>
    <widget class="QDateEdit" name="DateEdit">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>10</y>
       <width>110</width>
       <height>22</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <pointsize>10</pointsize>
       <italic>false</italic>
      </font>
     </property>
     <property name="calendarPopup">
      <bool>true</bool>
     </property>
    </widget>
    <widget class="QRadioButton" name="RB_VpType_03">
     <property name="geometry">
      <rect>
       <x>10</x>
       <y>90</y>
       <width>121</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string>VP error bars</string>
     </property>
    </widget>
   </widget>
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
      <x>1180</x>
      <y>230</y>
      <width>161</width>
      <height>201</height>
     </rect>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QFrame" name="frame">
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
       </property>
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
       <widget class="QLabel" name="StatusHeaderLabel">
        <property name="geometry">
         <rect>
          <x>10</x>
          <y>0</y>
          <width>141</width>
          <height>16</height>
         </rect>
        </property>
        <property name="font">
         <font>
          <pointsize>10</pointsize>
          <italic>false</italic>
          <bold>true</bold>
         </font>
        </property>
        <property name="text">
         <string>Status</string>
        </property>
       </widget>
       <widget class="QLabel" name="StatusLabel">
        <property name="geometry">
         <rect>
          <x>10</x>
          <y>40</y>
          <width>141</width>
          <height>151</height>
         </rect>
        </property>
        <property name="font">
         <font>
          <pointsize>10</pointsize>
          <italic>false</italic>
         </font>
        </property>
        <property name="text">
         <string>TextLabel</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
        </property>
       </widget>
       <widget class="QLabel" name="StatusDatabaseLabel">
        <property name="geometry">
         <rect>
          <x>10</x>
          <y>20</y>
          <width>141</width>
          <height>16</height>
         </rect>
        </property>
        <property name="font">
         <font>
          <pointsize>10</pointsize>
          <italic>false</italic>
          <bold>false</bold>
         </font>
        </property>
        <property name="text">
         <string>Database</string>
        </property>
       </widget>
      </widget>
     </item>
    </layout>
   </widget>
   <widget class="QLabel" name="StatusDestinationLabel">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>890</y>
      <width>621</width>
      <height>16</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <pointsize>8</pointsize>
      <italic>true</italic>
      <bold>false</bold>
     </font>
    </property>
    <property name="text">
     <string>Destination folder</string>
    </property>
   </widget>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>1350</width>
     <height>22</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>File</string>
    </property>
    <addaction name="ActionDefaultDatabase"/>
    <addaction name="ActionSelectDatabase"/>
    <addaction name="separator"/>
    <addaction name="ActionQuit"/>
   </widget>
   <widget class="QMenu" name="menuSave_plots">
    <property name="title">
     <string>Save plots</string>
    </property>
    <addaction name="ActionDestinationFolder"/>
    <addaction name="separator"/>
    <addaction name="ActionSaveAll"/>
    <addaction name="ActionSaveVpType_01"/>
    <addaction name="ActionSaveVpType_02"/>
    <addaction name="ActionSaveVpType_05"/>
    <addaction name="ActionSaveVpType_03"/>
    <addaction name="ActionSaveVpType_04"/>
   </widget>
   <addaction name="menuFile"/>
   <addaction name="menuSave_plots"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <action name="ActionQuit">
   <property name="text">
    <string>Quit</string>
   </property>
  </action>
  <action name="ActionSelectDatabase">
   <property name="text">
    <string>Select database</string>
   </property>
  </action>
  <action name="ActionDefaultDatabase">
   <property name="text">
    <string>Default database</string>
   </property>
  </action>
  <action name="ActionSaveAll">
   <property name="text">
    <string>All</string>
   </property>
  </action>
  <action name="ActionSaveVpType_01">
   <property name="text">
    <string>VP attributes</string>
   </property>
  </action>
  <action name="ActionSaveVpType_02">
   <property name="text">
    <string>VP histograms</string>
   </property>
  </action>
  <action name="ActionSaveVpType_03">
   <property name="text">
    <string>Vib activity (all)</string>
   </property>
  </action>
  <action name="ActionSaveVpType_04">
   <property name="text">
    <string>Vib activity (each)</string>
   </property>
  </action>
  <action name="ActionDestinationFolder">
   <property name="text">
    <string>Destination folder</string>
   </property>
  </action>
  <action name="ActionSaveVpType_05">
   <property name="text">
    <string>VP error bars</string>
   </property>
  </action>
 </widget>
 <tabstops>
  <tabstop>RB_VpType_01</tabstop>
  <tabstop>RB_VpType_02</tabstop>
  <tabstop>RB_VpType_04</tabstop>
  <tabstop>RB_VpType_05</tabstop>
  <tabstop>PB_Prev</tabstop>
  <tabstop>PB_Next</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
